[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://SwipeDetector.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29, 29 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="SwipeDetector" parent="." instance=ExtResource( 3 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
rotating = true
current = true
zoom = Vector2( 2, 2 )

[connection signal="swiped" from="SwipeDetector" to="." method="_on_SwipeDetector_swiped"]
[connection signal="swiped_cancelled" from="SwipeDetector" to="." method="_on_SwipeDetector_swiped_cancelled"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
